fix figrid project page icon wrapping

--- a/src/features/projects/projectsFigrid.module.scss
+++ b/src/features/projects/projectsFigrid.module.scss
@@ -43,5 +43,7 @@
 
   a {
     @include interactive_secondary();
+
+    white-space: nowrap;
   }
 }
